--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Sep 20 2021 21:16:27 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Sep 20 2021 21:34:23 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6148db729d52ac103facdcef" data-wf-site="6148ad6ca904cf7fd5dc8e08">
 <head>
   <meta charset="utf-8">
@@ -18,7 +18,7 @@
   <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
-<body class="body-2"><img src="images/UNADJUSTEDNONRAW_thumb_23fa.jpg" loading="lazy" sizes="100vw" srcset="images/UNADJUSTEDNONRAW_thumb_23fa-p-1080.jpeg 1080w, images/UNADJUSTEDNONRAW_thumb_23fa.jpg 1086w" alt="" class="image">
+<body class="body-2">
   <div id="r-1" class="r-container">
     <div data-w-id="f83d5526-4fa9-2dd3-95f6-584b5b869ad7" class="r-information">
       <h1 class="heading-2">Hola! Mi nombre es Valentina<br> </h1>
