--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Sep 20 2021 22:55:40 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Sep 20 2021 23:02:09 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6148db729d52ac103facdcef" data-wf-site="6148ad6ca904cf7fd5dc8e08">
 <head>
   <meta charset="utf-8">
@@ -28,7 +28,7 @@
   <div id="r-1" class="r-container">
     <div data-w-id="de2c968b-0185-cbb3-ef44-0f82f8a3b571" class="r-information">
       <a href="#" class="button-2 w-button">Sobre mí</a>
-      <a href="#" class="button w-button">Mi Testimonio</a>
+      <a href="old-home.html" class="button w-button">Mi Testimonio</a>
       <h2 class="heading-3">Esta es una de mis fotos favoritas que he tomado, si te gusta y la quieres llena este formulario y te la enviaré </h2>
     </div>
   </div>
