--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Sep 20 2021 23:05:16 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Sep 20 2021 23:28:28 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6148db729d52ac103facdcef" data-wf-site="6148ad6ca904cf7fd5dc8e08">
 <head>
   <meta charset="utf-8">
@@ -19,23 +19,25 @@
   <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
 <body class="body-2">
-  <div id="r-1" class="r-container">
-    <div data-w-id="f83d5526-4fa9-2dd3-95f6-584b5b869ad7" class="r-information">
-      <h1 class="heading-2">Hola! Mi nombre es Valentina<br> </h1>
-      <p class="paragraph-2">Soy estudiante de ingeniería civil industrial con especialización en computación - ingeniería de software, pensaba en dejar esto como portafolio o algo así pero bueno, ahí veremos qué pasa. <br>Para ver más contenido desliza hacia abajo. </p>
+  <div class="section-3 wf-section">
+    <div id="r-1" class="r-container">
+      <div data-w-id="f83d5526-4fa9-2dd3-95f6-584b5b869ad7" class="r-information">
+        <h1 class="heading-2">Hola! Mi nombre es Valentina<br> </h1>
+        <p class="paragraph-2">Soy estudiante de ingeniería civil industrial con especialización en computación - ingeniería de software, pensaba en dejar esto como portafolio o algo así pero bueno, ahí veremos qué pasa. <br>Para ver más contenido desliza hacia abajo. </p>
+      </div>
     </div>
-  </div>
-  <div id="r-1" class="r-container">
-    <div data-w-id="de2c968b-0185-cbb3-ef44-0f82f8a3b571" class="r-information">
-      <a href="#" class="button-2 w-button">Sobre mí</a>
-      <a href="old-home.html" class="button w-button">Mi Testimonio</a>
-      <h2 class="heading-3">Esta es una de mis fotos favoritas que he tomado, si te gusta y la quieres llena este formulario y te la enviaré </h2>
+    <div id="r-1" class="r-container">
+      <div data-w-id="520238e6-ef0f-798c-6dbd-aecfb09bf978" class="r-information">
+        <h1 class="heading-4">Contacto</h1>
+        <p class="paragraph-3">avcordova@uc.cl<br>@_valentina_cordova<br></p>
+      </div>
     </div>
-  </div>
-  <div id="r-1" class="r-container">
-    <div data-w-id="520238e6-ef0f-798c-6dbd-aecfb09bf978" class="r-information">
-      <h1 class="heading-4">Contacto</h1>
-      <p class="paragraph-3">avcordova@uc.cl<br>@_valentina_cordova<br></p>
+    <div id="r-1" class="r-container">
+      <div data-w-id="de2c968b-0185-cbb3-ef44-0f82f8a3b571" class="r-information">
+        <a href="#" class="button-2 w-button">Sobre mí</a>
+        <a href="old-home.html" class="button w-button">Mi Testimonio</a>
+        <h2 class="heading-3">Esta es una de mis fotos favoritas que he tomado, si te gusta y la quieres llena este formulario y te la enviaré </h2>
+      </div>
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6148ad6ca904cf7fd5dc8e08" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
