--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Sep 21 2021 02:18:06 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Sep 21 2021 02:50:17 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="614925da51341d1e325a7870" data-wf-site="614925da51341dbd295a786d">
 <head>
   <meta charset="utf-8">
@@ -25,23 +25,16 @@
     </div>
   </div>
   <div class="section wf-section">
-    <div class="w-container">
-      <div class="content-wrapper w-dyn-list">
-        <div role="list" class="w-dyn-items">
-          <div data-w-id="19785638-f29d-a999-7d17-4574c45bc060" style="opacity:0" role="listitem" class="blog-post w-dyn-item">
-            <a href="#" class="post-link w-inline-block"><img src="" alt="" class="main-image"></a>
-            <div class="heading-wrapper">
-              <h1 class="blog-headline"></h1>
-            </div>
-            <p class="blog-content"></p>
-          </div>
-        </div>
-        <div class="w-dyn-empty">
-          <p>No items found.</p>
-        </div>
-      </div>
+    <div class="w-container"><img src="images/sebastian-svenson-d2w-_1LJioQ-unsplash.jpg" loading="lazy" sizes="(max-width: 767px) 95vw, (max-width: 991px) 728px, 940px" srcset="images/sebastian-svenson-d2w-_1LJioQ-unsplash.jpg 800w, images/sebastian-svenson-d2w-_1LJioQ-unsplash.jpg 1600w, images/sebastian-svenson-d2w-_1LJioQ-unsplash.jpg 2000w, images/sebastian-svenson-d2w-_1LJioQ-unsplash.jpg 2600w, images/sebastian-svenson-d2w-_1LJioQ-unsplash.jpg 3200w, images/sebastian-svenson-d2w-_1LJioQ-unsplash.jpg 7680w" alt="">
+      <h1 class="heading">Las dos caras de la moneda</h1>
+      <p class="paragraph-2">Como todo en la vida, no hay solo una perspectiva ni una sola dimensión de las cosas, es decir, un mismo hecho puede ser visto desde distintos puntos de vista, esto no cambia la verdad sino que añade, así como mientras deslizas puedes ver los cambios de perspectiva. <br></p><img src="images/fakurian-design-PpgY7sjpf_0-unsplash.jpg" loading="lazy" sizes="(max-width: 767px) 95vw, (max-width: 991px) 728px, 940px" srcset="images/fakurian-design-PpgY7sjpf_0-unsplash.jpg 1080w, images/fakurian-design-PpgY7sjpf_0-unsplash.jpg 1600w, images/fakurian-design-PpgY7sjpf_0-unsplash.jpg 2000w, images/fakurian-design-PpgY7sjpf_0-unsplash.jpg 2600w, images/fakurian-design-PpgY7sjpf_0-unsplash.jpg 3000w" alt="">
+      <h1 class="heading-2">La Historia</h1>
+      <p class="paragraph-3">*** Mención de temas fuertes más adelante ***<br>Si bien los que me conocen siempre me han visto muy habladora y callada a la vez, la verdad es que de donde el Señor me sacó es de un lugar de mucha oscuridad que no todos se lo imaginan (realmente el Señor hace todas las cosas nuevas). Siempre he estado en la iglesia, en la congre pero, no siempre estuve firme ni conocía completamente al Señor y uno de los lugares de oscuridad de donde Dios me sacó fue de la inmoralidad sexual. <br><br>Sé que este termino es muy fuerte y bien amplió por lo que seré específica, por más de 10 años fui adicta a la pornografía, no sé quién ni cómo ni cuando comenzó todo, solo sé que esto estaba desde mis primeros recuerdos, durante años y desde muy pequeña luché con esto, sentía vergüenza de mi, de mi cuerpo desde los 5 años aproximadamente, por cosas que sentía que no podía comprender y está fue una lucha dura que se extendió durante toda mi vida hasta mis 18 años. El proceso de sanidad comenzó un día alrededor de mis 15-16 años cuando ya estaba aburrida de vivir la misma situación una y otra vez, de pedir perdón y no ser capaz de vencer, ahí en medio del caos de mis pensamientos y luego de una reunión con los hermanos, sentía la necesidad de hablar con mis papás tenía que decirles lo que pasaba y las cosas que desde pequeña había vivido, visto y me había guardado durante todo este tiempo, recuerdo que mis papás lloraron, mi mamá estaba destrozada pero a la vez fue firme, mi papá serio me dijo “hija de esta salimos porque el Señor está delante de nosotros”, esto no es el fin de la historia porque pasaron muchas cosas entre medio, muchos altos y bajos, idas y venidas. Si sabía que el Señor había pagado por mis pecados pero, sentía que todos merecían ese perdón menos yo, sentía que para mí el Señor deliberadamente decía que no. En medio de estos pensamientos mi corazón se rebeló porque no veía cambios sostenibles y volvía a caer, así que eso desató que empezara a beber, a ir a fiestas, a buscar consuelo en amigos, en pololos (novios) y varias cosas que no lograban llenar ese vacío, seguí así hasta el último año de colegio. <br>En el último mes de mi último año de colegio era el cumpleaños de uno de mis amigos, cumplía 18 años, una fiesta más o menos grande, esa fue la primera vez que tomé sin medida, mis amigas estaban un poco asustadas y le escribieron a mi papá para que me fuera a buscar, claramente no estaba consciente de lo que estaba pasando pero me subí al auto y me fui a mi casa, lo único que tenía miedo era de que mi papá se enojara conmigo, iba tratando de disimular y por lo que me dice el día de hoy, el no se dio cuenta de nada pero tenía una mala sensación. Desperté al otro día y no podía levantarme del temor que tenía, un escalofrío recorría mi espalda y mi cara estaba roja de vergüenza, el temor de Dios fue tan grande que tuve que ir a confesar a mis papás lo que había pasado, esperaba el castigo, esperaba que me pegaran, esperaba que me echaran de la casa, esperaba todo menos que me abrazaran, recuerdo que ahí conocí el amor de Dios si me alcanzaba, que también era para mi y no era un cliché de las iglesias. <br></p><img src="images/photo-1443610662308-74e383d24fbe.jpg" loading="lazy" alt="">
+      <h1 class="heading-3">Encontrando lo buscado</h1>
+      <p class="paragraph-4">Volviendo al comienzo, luego de esto fui a una escuela - campamento, ben iamin, ahí fue donde yo me entregué por completo al Señor y donde conocí la parte donde Cristo resucita, que no es que solo murió sino que resucitó, fui ministrada, bautizada y enviada como flecha para mi nación. Desde ese momento, en el que entregué mi vida por completo no he vuelto atrás, me aferré a la verdad que su poder es más grande, más grande es el que salva que el que ata, hoy puedo decir que el Señor venció. <br>Se que no soy la única que ha vivido esto, sé que hoy hay muchos jovencitos que luchan con esto pero debo decir, MAS GRANDE ES EL QUE SALVA QUE EL QUE ATA, hay esperanza, se puede vivir en santidad, podemos ser completamente libres en Cristo Jesús</p>
     </div>
   </div>
+  <div class="wf-section"></div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=614925da51341dbd295a786d" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
